--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 
+
 /* すべての要素のmarginとpaddingを0に設定します */
 * {
     margin: 0;
@@ -218,8 +219,8 @@ footer {
 
 
 .insta {
-    padding-top: 50px;
-    padding-left: 710px;
+    padding-top: 2%;
+    padding-left: 38.7%;
     text-align: center;
     float: left;
     text-decoration: none;
@@ -228,12 +229,21 @@ footer {
 
 .fb {
     float: left;
-    padding-left: 40px;
-    padding-top: 50px;
+    padding-top: 2%;
     text-decoration: none;
     text-align: center;
     color: #1B4A8B;
 }
+
+.git {
+    float: left;
+    padding-top: 1.5%;
+    padding-bottom: 0%;
+    text-decoration: none;
+    text-align: center;
+    color: #1B4A8B;
+}
+
 
 .shop h3 {
     font-size: 40px;
@@ -241,14 +251,6 @@ footer {
     padding-left: 240px;
     font-family: "Yuanti SC";
 }
-
-/*
-.torisetsu {
-    background-color: #ffffff;
-    height: 450px;
-    padding-top: 30px;
-}
-*/
 
 .setsumei2 {
     font-size: 26px;
@@ -310,16 +312,15 @@ footer {
 
 
     .insta {
-        padding-top: 0px;
-        padding-left: 150px;
+        padding-left: 39%;
         float: none;
         text-decoration: none;
         text-align: center;
     }
 
     .fb {
-        padding-left: 130px;
-        padding-top: 30px;
+        padding-left: 34%;
+        padding-top: 10%;
         text-decoration: none;
         text-align: center;
 
@@ -327,7 +328,9 @@ footer {
 
     .sns {
         background-color: #ffffff;
-        height: 400px;
+        height: 530px;
+        margin-right: 15%;
+        margin-left: 10%;
         padding-top: 30px;
     }
 
@@ -380,4 +383,9 @@ footer {
         margin-right: 5px;
         text-align: center;
     }
-}
+
+    .git {
+        float: left;
+        padding-top: 1.5%;
+        padding-left: 24%;
+    }
